// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementSummary renders loading panel 1`] = `
<PanelLoading
  minHeight="115px"
/>
`;

exports[`EngagementSummary renders metric summary 1`] = `
<Panel>
  <Grid>
    <Grid.Column
      md={3}
      xl={2}
      xs={12}
    >
      <h1>
        0.42%
      </h1>
      <h6>
        Unique Open Rate
      </h6>
    </Grid.Column>
    <Grid.Column
      md={3}
      xl={2}
      xs={12}
    >
      <h1>
        0.1%
      </h1>
      <h6>
        Unique Click Rate
      </h6>
    </Grid.Column>
    <Grid.Column
      md={6}
      xl={8}
      xs={12}
    >
      <p>
        Of 
        <strong>
          123,123
        </strong>
         targeted recipients, 
        <strong>
          0
        </strong>
         messages were accepted, 
        <strong>
          523
        </strong>
         were opened and 
        <strong>
          123
        </strong>
         were clicked 
        <span>
          in the 
          <strong>
            last hour
          </strong>
        </span>
        .
      </p>
    </Grid.Column>
  </Grid>
</Panel>
`;

exports[`EngagementSummary renders metric summary with custom time range 1`] = `
<Panel>
  <Grid>
    <Grid.Column
      md={3}
      xl={2}
      xs={12}
    >
      <h1>
        0.42%
      </h1>
      <h6>
        Unique Open Rate
      </h6>
    </Grid.Column>
    <Grid.Column
      md={3}
      xl={2}
      xs={12}
    >
      <h1>
        0.1%
      </h1>
      <h6>
        Unique Click Rate
      </h6>
    </Grid.Column>
    <Grid.Column
      md={6}
      xl={8}
      xs={12}
    >
      <p>
        Of 
        <strong>
          123,123
        </strong>
         targeted recipients, 
        <strong>
          0
        </strong>
         messages were accepted, 
        <strong>
          523
        </strong>
         were opened and 
        <strong>
          123
        </strong>
         were clicked 
        <span>
          from 
          <strong>
            Dec 31 1969, 7:00pm
          </strong>
           to 
          <strong>
            Jan 2 1970, 7:00pm
          </strong>
        </span>
        .
      </p>
    </Grid.Column>
  </Grid>
</Panel>
`;

exports[`EngagementSummary returns null 1`] = `""`;
